Beginn von Module FE implementierung
