# frontend/swagger.json
@@ -215,6 +215,26 @@
         "responses": {
           "200": {
             "description": "Success"
+          },
+          "401": {
+            "description": "Unauthorized",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                }
+              }
+            }
           }
         }
       },
@@ -403,6 +423,54 @@
       }
     },
     "/api/Module/getModulesForUser": {
+      "get": {
+        "tags": [
+          "Module"
+        ],
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "query",
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/ModuleDetailItem"
+                  }
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/ModuleDetailItem"
+                  }
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/ModuleDetailItem"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/Module/getModulesUserIsAdminOf": {
       "get": {
         "tags": [
           "Module"
@@ -756,14 +824,6 @@
           "owner": {
             "$ref": "#/components/schemas/ApplicationUser"
           },
-          "isDeleted": {
-            "type": "boolean"
-          },
-          "deletedDate": {
-            "type": "string",
-            "format": "date-time",
-            "nullable": true
-          },
           "runningNumber": {
             "type": "integer",
             "format": "int32"
@@ -812,14 +872,6 @@
           },
           "owner": {
             "$ref": "#/components/schemas/ApplicationUser"
-          },
-          "isDeleted": {
-            "type": "boolean"
-          },
-          "deletedDate": {
-            "type": "string",
-            "format": "date-time",
-            "nullable": true
           },
           "isArchived": {
             "type": "boolean"
@@ -900,16 +952,7 @@
             "format": "date-time",
             "nullable": true
           },
-          "deletedDate": {
-            "type": "string",
-            "format": "date-time",
-            "nullable": true
-          },
           "isArchived": {
-            "type": "boolean",
-            "readOnly": true
-          },
-          "isDeleted": {
             "type": "boolean",
             "readOnly": true
           },
@@ -985,14 +1028,6 @@
           "owner": {
             "$ref": "#/components/schemas/ApplicationUser"
           },
-          "isDeleted": {
-            "type": "boolean"
-          },
-          "deletedDate": {
-            "type": "string",
-            "format": "date-time",
-            "nullable": true
-          },
           "code": {
             "type": "string",
             "nullable": true
@@ -1029,14 +1064,6 @@
           },
           "owner": {
             "$ref": "#/components/schemas/ApplicationUser"
-          },
-          "isDeleted": {
-            "type": "boolean"
-          },
-          "deletedDate": {
-            "type": "string",
-            "format": "date-time",
-            "nullable": true
           },
           "modificationTime": {
             "type": "string",
@@ -1089,14 +1116,6 @@
           },
           "owner": {
             "$ref": "#/components/schemas/ApplicationUser"
-          },
-          "isDeleted": {
-            "type": "boolean"
-          },
-          "deletedDate": {
-            "type": "string",
-            "format": "date-time",
-            "nullable": true
           },
           "creationTime": {
             "type": "string",
@@ -1224,14 +1243,6 @@
           },
           "owner": {
             "$ref": "#/components/schemas/ApplicationUser"
-          },
-          "isDeleted": {
-            "type": "boolean"
-          },
-          "deletedDate": {
-            "type": "string",
-            "format": "date-time",
-            "nullable": true
           },
           "isArchived": {
             "type": "boolean"
